grammar/src/grammar.c
/* A recursive-descent parser generated by peg 0.1.18 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 10
#line 1 "grammar.peg"

#ifdef __cplusplus
extern "C" {
#endif

#include <stdio.h>
#define YYSTYPE char*
#define YY_CTX_LOCAL 1

typedef struct {
  char* action;
  char* targets;
  char* objects;
  bool flagEmpty;
  bool flagKeyword;
} expression;

expression g_expression;
char* g_inputString;
int g_inputPos;

void free_expression() {
  free(g_expression.action);
  free(g_expression.targets);
  free(g_expression.objects);
}

void clear_expression() {
  free_expression();
  g_expression.action = (YYSTYPE)malloc(1);
  g_expression.targets = (YYSTYPE)malloc(1);
  g_expression.objects = (YYSTYPE)malloc(1);
  g_expression.action[0] = '\0';
  g_expression.targets[0] = '\0';
  g_expression.objects[0] = '\0';
  g_expression.flagEmpty = false;
  g_expression.flagKeyword = false;
}

void expression_set_action(YYSTYPE str, int len) {
  free(g_expression.action);
  g_expression.action = (YYSTYPE)malloc(len + 1);
  strcpy(g_expression.action, str);
}

void expression_add_target(YYSTYPE str, int len) {
  int oldLen = strlen(g_expression.targets);

  YYSTYPE tmp = (YYSTYPE)realloc(g_expression.targets, oldLen + len + 1);
  if (tmp == NULL) {
    printf("realloc error\n");
    return;
  }
  g_expression.targets = tmp;
  
  memcpy(g_expression.targets + oldLen, str, len);
  g_expression.targets[oldLen + len - 1] = ';';
  g_expression.targets[oldLen + len] = '\0';
}

void expression_add_object(YYSTYPE str, int len) {
  int oldLen = strlen(g_expression.objects);

  YYSTYPE tmp = (YYSTYPE)realloc(g_expression.objects, oldLen + len + 1);
  if (tmp == NULL) {
    printf("realloc error\n");
    return;
  }
  g_expression.objects = tmp;
  
  memcpy(g_expression.objects + oldLen, str, len);
  g_expression.objects[oldLen + len - 1] = ';';
  g_expression.objects[oldLen + len] = '\0';
}


#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_Word(yycontext *yy); /* 10 */
YY_RULE(int) yy_Target(yycontext *yy); /* 9 */
YY_RULE(int) yy_Positional(yycontext *yy); /* 8 */
YY_RULE(int) yy_Object(yycontext *yy); /* 7 */
YY_RULE(int) yy_Preposition(yycontext *yy); /* 6 */
YY_RULE(int) yy_Action(yycontext *yy); /* 5 */
YY_RULE(int) yy_End(yycontext *yy); /* 4 */
YY_RULE(int) yy_Expression(yycontext *yy); /* 3 */
YY_RULE(int) yy__(yycontext *yy); /* 2 */
YY_RULE(int) yy_Statement(yycontext *yy); /* 1 */

YY_ACTION(void) yy_1_Word(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Word\n"));
  {
#line 85
   __ = strdup(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_Action(yycontext *yy, char *yytext, int yyleng)
{
#define w yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Action\n"));
  {
#line 84
   expression_set_action(w, yyleng+1); free(w); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef w
}
YY_ACTION(void) yy_1_Target(yycontext *yy, char *yytext, int yyleng)
{
#define w yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Target\n"));
  {
#line 83
   expression_add_target(w, yyleng+1); free(w); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef w
}
YY_ACTION(void) yy_1_Object(yycontext *yy, char *yytext, int yyleng)
{
#define w yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Object\n"));
  {
#line 82
   expression_add_object(w, yyleng+1); free(w); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef w
}
YY_ACTION(void) yy_1_Expression(yycontext *yy, char *yytext, int yyleng)
{
#define w yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Expression\n"));
  {
#line 81
   expression_set_action(w, yyleng+1); free(w); g_expression.flagKeyword = true; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef w
}
YY_ACTION(void) yy_1_Statement(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Statement\n"));
  {
#line 79
   g_expression.flagEmpty = true; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}

YY_RULE(int) yy_Word(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "Word"));  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_BEGIN)) goto l1;
#undef yytext
#undef yyleng
  }  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\000\000\000\000\000\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l1;
  l2:;	
  {  int yypos3= yy->__pos, yythunkpos3= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\000\000\000\000\000\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l3;  goto l2;
  l3:;	  yy->__pos= yypos3; yy->__thunkpos= yythunkpos3;
  }  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_END)) goto l1;
#undef yytext
#undef yyleng
  }  if (!yy__(yy)) goto l1;  yyDo(yy, yy_1_Word, yy->__begin, yy->__end);
  yyprintf((stderr, "  ok   %s @ %s\n", "Word", yy->__buf+yy->__pos));
  return 1;
  l1:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Word", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Target(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;  yyDo(yy, yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "Target"));
  {  int yypos5= yy->__pos, yythunkpos5= yy->__thunkpos;  if (!yy_Preposition(yy)) goto l5;  goto l4;
  l5:;	  yy->__pos= yypos5; yy->__thunkpos= yythunkpos5;
  }
  {  int yypos6= yy->__pos, yythunkpos6= yy->__thunkpos;  if (!yy_Positional(yy)) goto l6;  goto l4;
  l6:;	  yy->__pos= yypos6; yy->__thunkpos= yythunkpos6;
  }  if (!yy_Word(yy)) goto l4;  yyDo(yy, yySet, -1, 0);  yyDo(yy, yy_1_Target, yy->__begin, yy->__end);
  yyprintf((stderr, "  ok   %s @ %s\n", "Target", yy->__buf+yy->__pos));  yyDo(yy, yyPop, 1, 0);
  return 1;
  l4:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Target", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Positional(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "Positional"));
  {  int yypos8= yy->__pos, yythunkpos8= yy->__thunkpos;  if (!yymatchString(yy, "on")) goto l9;  goto l8;
  l9:;	  yy->__pos= yypos8; yy->__thunkpos= yythunkpos8;  if (!yymatchString(yy, "in")) goto l10;  goto l8;
  l10:;	  yy->__pos= yypos8; yy->__thunkpos= yythunkpos8;  if (!yymatchString(yy, "inside")) goto l11;  goto l8;
  l11:;	  yy->__pos= yypos8; yy->__thunkpos= yythunkpos8;  if (!yymatchString(yy, "under")) goto l12;  goto l8;
  l12:;	  yy->__pos= yypos8; yy->__thunkpos= yythunkpos8;  if (!yymatchString(yy, "above")) goto l13;  goto l8;
  l13:;	  yy->__pos= yypos8; yy->__thunkpos= yythunkpos8;  if (!yymatchString(yy, "from")) goto l7;
  }
  l8:;	  if (!yy__(yy)) goto l7;
  yyprintf((stderr, "  ok   %s @ %s\n", "Positional", yy->__buf+yy->__pos));
  return 1;
  l7:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Positional", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Object(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;  yyDo(yy, yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "Object"));
  {  int yypos15= yy->__pos, yythunkpos15= yy->__thunkpos;  if (!yy_Preposition(yy)) goto l15;  goto l14;
  l15:;	  yy->__pos= yypos15; yy->__thunkpos= yythunkpos15;
  }
  {  int yypos16= yy->__pos, yythunkpos16= yy->__thunkpos;  if (!yy_Positional(yy)) goto l16;  goto l14;
  l16:;	  yy->__pos= yypos16; yy->__thunkpos= yythunkpos16;
  }  if (!yy_Word(yy)) goto l14;  yyDo(yy, yySet, -1, 0);  yyDo(yy, yy_1_Object, yy->__begin, yy->__end);
  yyprintf((stderr, "  ok   %s @ %s\n", "Object", yy->__buf+yy->__pos));  yyDo(yy, yyPop, 1, 0);
  return 1;
  l14:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Object", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Preposition(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "Preposition"));
  {  int yypos18= yy->__pos, yythunkpos18= yy->__thunkpos;  if (!yymatchString(yy, "the")) goto l19;  goto l18;
  l19:;	  yy->__pos= yypos18; yy->__thunkpos= yythunkpos18;  if (!yymatchChar(yy, 'a')) goto l17;
  }
  l18:;	  if (!yy__(yy)) goto l17;
  yyprintf((stderr, "  ok   %s @ %s\n", "Preposition", yy->__buf+yy->__pos));
  return 1;
  l17:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Preposition", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Action(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;  yyDo(yy, yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "Action"));  if (!yy_Word(yy)) goto l20;  yyDo(yy, yySet, -1, 0);  yyDo(yy, yy_1_Action, yy->__begin, yy->__end);
  yyprintf((stderr, "  ok   %s @ %s\n", "Action", yy->__buf+yy->__pos));  yyDo(yy, yyPop, 1, 0);
  return 1;
  l20:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Action", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_End(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "End"));
  {  int yypos22= yy->__pos, yythunkpos22= yy->__thunkpos;  if (!yymatchChar(yy, '\n')) goto l23;  goto l22;
  l23:;	  yy->__pos= yypos22; yy->__thunkpos= yythunkpos22;  if (!yymatchString(yy, "\r\n")) goto l24;  goto l22;
  l24:;	  yy->__pos= yypos22; yy->__thunkpos= yythunkpos22;  if (!yymatchChar(yy, '\r')) goto l25;  goto l22;
  l25:;	  yy->__pos= yypos22; yy->__thunkpos= yythunkpos22;  if (!yymatchChar(yy, ';')) goto l21;
  }
  l22:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "End", yy->__buf+yy->__pos));
  return 1;
  l21:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "End", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Expression(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;  yyDo(yy, yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "Expression"));
  {  int yypos27= yy->__pos, yythunkpos27= yy->__thunkpos;  if (!yy_Action(yy)) goto l28;
  {  int yypos29= yy->__pos, yythunkpos29= yy->__thunkpos;  if (!yy_Preposition(yy)) goto l29;  goto l30;
  l29:;	  yy->__pos= yypos29; yy->__thunkpos= yythunkpos29;
  }
  l30:;	  if (!yy_Object(yy)) goto l28;
  l31:;	
  {  int yypos32= yy->__pos, yythunkpos32= yy->__thunkpos;  if (!yy_Object(yy)) goto l32;  goto l31;
  l32:;	  yy->__pos= yypos32; yy->__thunkpos= yythunkpos32;
  }
  {  int yypos33= yy->__pos, yythunkpos33= yy->__thunkpos;  if (!yy_Positional(yy)) goto l33;
  {  int yypos35= yy->__pos, yythunkpos35= yy->__thunkpos;  if (!yy_Preposition(yy)) goto l35;  goto l36;
  l35:;	  yy->__pos= yypos35; yy->__thunkpos= yythunkpos35;
  }
  l36:;	  if (!yy_Target(yy)) goto l33;
  l37:;	
  {  int yypos38= yy->__pos, yythunkpos38= yy->__thunkpos;  if (!yy_Target(yy)) goto l38;  goto l37;
  l38:;	  yy->__pos= yypos38; yy->__thunkpos= yythunkpos38;
  }  goto l34;
  l33:;	  yy->__pos= yypos33; yy->__thunkpos= yythunkpos33;
  }
  l34:;	  goto l27;
  l28:;	  yy->__pos= yypos27; yy->__thunkpos= yythunkpos27;  if (!yy_Word(yy)) goto l26;  yyDo(yy, yySet, -1, 0);  yyDo(yy, yy_1_Expression, yy->__begin, yy->__end);
  }
  l27:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "Expression", yy->__buf+yy->__pos));  yyDo(yy, yyPop, 1, 0);
  return 1;
  l26:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Expression", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy__(yycontext *yy)
{
  yyprintf((stderr, "%s\n", "_"));
  l40:;	
  {  int yypos41= yy->__pos, yythunkpos41= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\002\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l41;  goto l40;
  l41:;	  yy->__pos= yypos41; yy->__thunkpos= yythunkpos41;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "_", yy->__buf+yy->__pos));
  return 1;
}
YY_RULE(int) yy_Statement(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "Statement"));
  {  int yypos43= yy->__pos, yythunkpos43= yy->__thunkpos;  if (!yy__(yy)) goto l44;  if (!yy_Expression(yy)) goto l44;  if (!yy_End(yy)) goto l44;  goto l43;
  l44:;	  yy->__pos= yypos43; yy->__thunkpos= yythunkpos43;  if (!yymatchString(yy, "")) goto l42;  if (!yy_End(yy)) goto l42;  yyDo(yy, yy_1_Statement, yy->__begin, yy->__end);
  }
  l43:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "Statement", yy->__buf+yy->__pos));
  return 1;
  l42:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Statement", yy->__buf+yy->__pos));
  return 0;
}

#ifndef YY_PART

typedef int (*yyrule)(yycontext *yy);

YY_PARSE(int) YYPARSEFROM(YY_CTX_PARAM_ yyrule yystart)
{
  int yyok;
  if (!yyctx->__buflen)
    {
      yyctx->__buflen= YY_BUFFER_SIZE;
      yyctx->__buf= (char *)YY_MALLOC(yyctx, yyctx->__buflen);
      yyctx->__textlen= YY_BUFFER_SIZE;
      yyctx->__text= (char *)YY_MALLOC(yyctx, yyctx->__textlen);
      yyctx->__thunkslen= YY_STACK_SIZE;
      yyctx->__thunks= (yythunk *)YY_MALLOC(yyctx, sizeof(yythunk) * yyctx->__thunkslen);
      yyctx->__valslen= YY_STACK_SIZE;
      yyctx->__vals= (YYSTYPE *)YY_MALLOC(yyctx, sizeof(YYSTYPE) * yyctx->__valslen);
      yyctx->__begin= yyctx->__end= yyctx->__pos= yyctx->__limit= yyctx->__thunkpos= 0;
    }
  yyctx->__begin= yyctx->__end= yyctx->__pos;
  yyctx->__thunkpos= 0;
  yyctx->__val= yyctx->__vals;
  yyok= yystart(yyctx);
  if (yyok) yyDone(yyctx);
  yyCommit(yyctx);
  return yyok;
}

YY_PARSE(int) YYPARSE(YY_CTX_PARAM)
{
  return YYPARSEFROM(YY_CTX_ARG_ yy_Statement);
}

YY_PARSE(yycontext *) YYRELEASE(yycontext *yyctx)
{
  if (yyctx->__buflen)
    {
      yyctx->__buflen= 0;
      YY_FREE(yyctx, yyctx->__buf);
      YY_FREE(yyctx, yyctx->__text);
      YY_FREE(yyctx, yyctx->__thunks);
      YY_FREE(yyctx, yyctx->__vals);
    }
  return yyctx;
}

#endif
#line 91 "grammar.peg"


#ifdef __cplusplus
}
#endif

